# tweeter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily.yml
config/: curated_accounts.txt  finance_firms.txt  queries.yml
config/profiles/finance/: queries.yml
config/profiles/startup/: curated_accounts.txt  queries.yml  startup_firms.txt
src/finxnews/: __init__.py  __main__.py  cluster.py  config.py  dedupe.py  emailer.py  llm.py  models.py  newsletter.py  pipeline.py  rank.py  store.py  universe.py  x_client.py
tests/: test_cluster.py  test_rank.py
